collapsed group width fix

--- a/src/assets/styles/components/group/GroupHeaderCollapsed.scss
+++ b/src/assets/styles/components/group/GroupHeaderCollapsed.scss
@@ -15,6 +15,7 @@
     position: sticky;
     left:0;
     background-color: white;
+    width:380px;
 
 }
 
